# AudioFrequency

./: .gitignore  CMakeLists.txt  Codec.cpp  Codec.h  Demuxer.cpp  Demuxer.h  EnumDevice.cpp  EnumDevice.h  EnumDevice.mm  FrequencySpectrum.cpp  FrequencySpectrum.h  README.md  ffmpeg.h  main.cpp  utils.cpp  utils.h
